@@ -285,6 +285,10 @@ extern void tty_command (char *, int);
 
 extern void attach_command (char *, int);
 
+extern char *get_inferior_arg (void);
+
+extern char *set_inferior_arg (char *);
+
 /* Last signal that the inferior received (why it stopped).  */
 
 extern enum target_signal stop_signal;
